# Tic-Tac-Toe-using-AI-Algorithms

./: CMakeLists.txt  LICENSE  README.md  board.c  board.h  computer_move.c  computer_move.h  gui.c  gui.h  main.c
